--- a/style.css
+++ b/style.css
@@ -1,5 +1,19 @@
 body {
+  background: cyan;
   width: 100%;
   height: 100%;
-  margin: 0;
+ 
+}
+
+header{
+  margin: auto;
+  color: brown;
+  text-align: center;}
+a{
+  padding: 10px 10px;
+  background-color: gray;
+}
+img{
+  margin-left: auto;
+  margin-right: auto;
 }
